5week/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: catalog-virtualservice
  namespace: istioinaction
spec:
  gateways:
  - coolstore-gateway
  hosts:
  - catalog.istioinaction.io
  http:
  - route:
    - destination:
        host: catalog
        port:
          number: 80
